--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -35,7 +35,7 @@
     </section>
 
     <footer>
-      © 2021 <a href="https://github.com/UltiRequiem">Eliaz Bobadilla</a>
+      © 2022 <a href="https://github.com">Mohammed Samsuddin</a>
     </footer>
   </body>
 </html>
